fixed tagbar overflow bug

--- a/client/app/modules/Tags/styles/index.css
+++ b/client/app/modules/Tags/styles/index.css
@@ -58,6 +58,8 @@
 
 }
 
+
+
 .searchInput {
   display: inline-block;
   height: 20px;
@@ -69,8 +71,12 @@
   line-height: 30px;
 }
 
+.searchBar {
+  overflow: hidden;
+}
+
 .tag {
-  display: inline-block;
+  display: inline;
   padding: 0 20px;
   line-height: 35px;
 }
